docs: scripts de ejecución, .gitignore y documentación final
- run.bat: ejecuta la interfaz gráfica JavaFX con doble clic
- compilar.bat: recompila todo el proyecto
- run-consola.bat: modo alternativo sin JavaFX
- .gitignore: excluye .class, datos .txt y carpeta .claude
- README.md: reescrito con tabla de contenidos, instrucciones para
  Windows/macOS/Linux, tabla de solución de problemas y guía completa
- CHANGELOG.md: versión v2.1 documentada

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>